# heritage-splitter

./: .gitignore  Makefile  README.md  Tiltfile  Tiltfile.e2e  annalyse  droit francais  france  mvp  pitch  pitch2
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/documents/: 39edddce-235a-4981-8e7d-933ba5dc6af0  aa36268f-4429-4eac-bfe0-b023200b291e
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs
backend/src/models/: allocation.rs  collection.rs  direct_message.rs  document.rs  message.rs  mod.rs  nft.rs  notification.rs  participant.rs  project.rs  showroom.rs  user.rs  work.rs
backend/src/routes/: ai.rs  allocations.rs  auth.rs  collections.rs  direct_messages.rs  documents.rs  health.rs  images.rs  messages.rs  mod.rs  notifications.rs  participants.rs  projects.rs  public.rs  showrooms.rs  users.rs  works.rs  ws.rs
backend/src/services/: audit.rs  blockchain.rs  documents.rs  mod.rs  notifications.rs  storage.rs
backend/tests/: showroom_api.rs
blockchain/: foundry.toml
docs/: audit-issues-2.md  audit-issues-3.md  audit-issues-4.md  audit-issues-5.md  audit-issues-6.md  audit-issues.md  legal-mapping.md  marketplace.md  test-plan-vault.md
documentation/: README.md  api-reference.md  architecture-decisions.md  architecture-overview.md  database-schema.md  deployment-guide.md  payment-flows.md  personas.md  product-overview.md  security-model.md  smart-contracts.md  technical-stack.md  testing-strategy.md  user-journeys.md
e2e/: README.md  (+4 more)
(+146 files in other folders)
